--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           alt="image">
       </div>
       <div class="site-title-block">
-        <h1 class="site-title">Ibnu Rizqia R</h1>
+        <h1 class="site-title">Ibnu</h1>
       </div>
 
       <div class="site-nav">
